
cmake_minimum_required(VERSION 2.0)

project(fast_matmult)

add_subdirectory(src/fast_matmult)

# install(FILES COPYRIGHT README.md DESTINATION share/doc/fast_matmult)
# install(PROGRAMS run.sh DESTINATION bin)
# install(PROGRAMS bin/fast_matmult DESTINATION bin)
# install(DIRECTORY doc/ DESTINATION share/doc/fast_matmult)
